# dlpd

./: .gitignore  README.md  build_project.sh  conda_list.sh  dag.tmp  issues.txt  make_dag.sh  pull_ortholog_database.sh  resolve_conda_envs.sh  smk_driver.slurm  tamu_grace_env.sh
config/: .~lock.master_control.tsv#  config.yaml  control_symlinks.tsv  master_control.tsv
config/curation/: BL3605.tsv  BL36283.tsv  BL54591.tsv  BL5905.tsv  instantiate_curation_files.sh
containers/: pmdv.sif
slurm_parameters/: config.yaml
workflow/: Snakefile
workflow/envs/: assembly.yaml  assembly_qc.yaml  breakasm.yaml  busco.yaml  compleasm.yaml  daedalus.yaml  mapping.yaml  mummer.yaml  python.yaml  svmu2.yaml
workflow/rules/: assembly.smk  mapping.smk  mapping_qv.smk  quality_control.smk
workflow/scripts/: breakasm.py  compute_qv.py  descaffold.py  qv_from_vcf.py  test.tsv
workflow/tools/svmu2/: LICENSE  README.md  pyproject.toml
workflow/tools/svmu2/src/svmu2/: README.txt  delta_parser.py  dotplot_line_segment.py  svmu_core.py  svmu_synteny.py
workflow/tools/svmu2/src/svmu2/IO/: vcf.py
workflow/tools/svmu2/src/svmu2/core/: scaffold.py
workflow/tools/svmu2/src/svmu2/models/: alignment.py  line_segment.py
workflow/tools/svmu2/src/svmu2/orchestration/: parse.py  synteny.py
workflow/tools/svmu2/src/svmu2/visualization/: interactive.py  renderers.py
