[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "svmu2"
version = "0.1.0"
description = "Structural variant detection from whole genome alignments"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
    { name = "Trevor Millar" }
]
requires-python = ">=3.6"

dependencies = [
    "numpy",
    "pysam",
    "matplotlib",
    "plotly",
    "networkx",
    "intervaltree",
    "pymannkendall"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.scripts]
svmu2 = "svmu2.interface.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
